# kle-serial-rs

./: .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  LICENCE-MIT  README.md
.github/workflows/: test.yml
src/: error.rs  f32.rs  f64.rs  lib.rs  utils.rs
src/de/: json.rs  mod.rs
