[package]
name = "kle-serial"
version = "0.1.0"
authors = ["Lucas Jansen"]
edition = "2021"
rust-version = "1.63"
description = "Rust deserialisation library for Keyboard Layout Editor JSON files"
repository = "https://github.com/staticintlucas/kle-serial-rs"
license = "MIT OR Apache-2.0"
keywords = ["keyboard", "keycap", "keyset", "layout", "KLE"]
categories = ["encoding", "parser-implementations"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csscolorparser = { version = "0.6", features = ["named-colors"] }
itertools = "0.10"
rgb = { version = "0.8", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
smart-default = "0.7"

[dev-dependencies]
assert_matches = "1.5"
